# pjpo-curvature

./: README.md
pjpo_curvature/: CMakeLists.txt  package.xml
pjpo_curvature/config/: config.rviz
pjpo_curvature/include/pjpo_curvature/: cartesian_planner_config.h  discretized_trajectory.h  dp_planner.h  environment.h  pjpo_curvature.h  tic_toc.h  vehicle_param.h
pjpo_curvature/include/pjpo_curvature/math/: aabox2d.h  box2d.h  line_segment2d.h  math_utils.h  polygon2d.h  pose.h  vec2d.h
pjpo_curvature/include/pjpo_curvature/visualization/: color.h  plot.h
pjpo_curvature/launch/: combine.launch  draw.launch  origin_reference_line.launch  path_optimization.launch  reference_line.launch
pjpo_curvature/msg/: CenterLinePoint.msg  FrenetPath.msg  FrenetPoint.msg
pjpo_curvature/script/: draw_kappa_trajectory.py  iteration_draw_kappa_trajectory.py  origin_ref_pub.py  pickle_publisher.py  reference_publisher.py
pjpo_curvature/src/: pjpo_curvature_node.cpp
pjpo_curvature/src/pjpo_curvature/: discretized_trajectory.cpp  dp_planner.cpp  environment.cpp  pjpo_curvature.cpp
pjpo_curvature/src/pjpo_curvature/math/: aabox2d.cpp  box2d.cpp  line_segment2d.cpp  math_utils.cpp  polygon2d.cpp  vec2d.cpp
pjpo_curvature/src/pjpo_curvature/visualization/: color.cpp  plot.cpp
scripts/: dynamic_kappa_square_warmstart_estimation.py  dynamic_kappa_warmstart_estimation.py
